k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-container
          image: rozarioagro/k8s-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
  selector:
    matchLabels:
      app: backend-app
