k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
#    ingress.alb.yc.io/group-name: main
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: p2f.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
